[package]
name = "solar-system"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["jpeg"] }
bevy-inspector-egui = "0.28.0"
bevy_panorbit_camera = "0.21.1"
bevy_screen_diagnostics = "0.6.0"
iyes_perf_ui = {git = "https://github.com/IyesGames/iyes_perf_ui", rev = "d8f3cbb"}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
